Create project lib

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "vccvn/gomee",
-    "description": "library for laravel",
+    "description": "library for Laravel Web3",
     "authors": [
         {
             "name": "Doan LN",
