update guzzle lib

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
         "files": ["src/helpers/utils.php"]
     },
     "require": {
-        "guzzlehttp/guzzle": "7.4.x-dev"
+        "guzzlehttp/guzzle": "7.x"
     }
 }
